# typewise-embeddings

./: README.md  pyproject.toml
src/typewise_embeddings/: __init__.py
